# aggregate_uav

./: .gitignore  .gitmodules  LICENSE  README.md  requirements.txt
Crazyflie/: agents.txt  agents23  agents32  agents_22.txt  agents_lab.txt  agents_sim_lab.txt  robot.sdf  run_gazebo_sitl.sh
Crazyflie/worlds/: crazyfly_model.sdf.jinja  crazysim_default.sdf
GAZEBO_Create3/: README.md
GAZEBO_Create3/src/create3_poc_didattico/: CMakeLists.txt  README.md  package.xml
GAZEBO_Turtlebot3/: README.md
GAZEBO_Turtlebot3/src/multi_turtlebot3/: README.md  turtlebot3.repos
Gazebo_Custom_Plugins/: CMakeLists.txt  README.md  package.xml
Gazebo_Custom_Plugins/include/gazebo_plugins/: gazebo_actor_ros_planar_move.hpp
Gazebo_Custom_Plugins/src/: gazebo_actor_ros_planar_move.cpp
Gazebo_Custom_Plugins/wearable_interfaces/: CMakeLists.txt  package.xml
Navigation_System/: README.md
Navigation_System/src/: README.md
PoC/: Crazyflie  GAZEBO_Create3  GAZEBO_Turtlebot3  Gazebo_Custom_Plugins  Navigation_System  Proxies  Robot_Reader  Robot_Writer  Sensors_Server  Sensors_Web_App  Wearable_Reader  commonwears_demo_run.sh  crazyflie_run.sh  create3_board_legacy_run.bash  create3_board_run.bash  create3_run.bash  decrease_battery.sh  install_fcpp_crazyflie.sh  install_or_update.sh  out_of_order.sh  restart_actor_walking.sh  server_proxies_run.bash  store_run.sh  trigger_sos_event.sh  turtlebot3_run.sh  use_case_resources  wearable_reader.sh
PoC/AP_Engine/: CMakeLists.txt  README.MD  make.sh  run_engine.sh  run_engine_default.sh  run_engine_highDistance.sh  run_engine_lowDistance.sh
PoC/AP_Engine/lib/: action_writer.cpp  action_writer.hpp  ap_engine.hpp  ap_engine_old.hpp  ap_engine_setup.hpp  ap_engine_setup_embedded.hpp  common_data.cpp  common_data.hpp  feedback_parser.cpp  feedback_parser.h  file_utils.cpp  file_utils.hpp  file_watcher.hpp  goal_parser.cpp  goal_parser.h  poc_config.hpp  poc_file_watcher.cpp  poc_file_watcher.hpp  poc_utils.cpp  poc_utils.hpp  wearable_feedback_parser.cpp  wearable_feedback_parser.h
PoC/AP_Engine/lib/drivers/wifi/: driver.hpp
PoC/AP_Engine/run/: ap_engine.cpp  ap_engine_embedded.cpp  fw_main.cpp
Proxies/: README.md
Robot_Reader/src/robot_reader/: package.xml  setup.cfg  setup.py
Robot_Reader/src/robot_reader/robot_reader/: battery.py  config.py  coords.py  feedback_writer.py  goal.py  odom_reader.py  position.py  reader.py  store.py
Robot_Writer/: README.md
Sensors_Server/: Dockerfile  LICENCE.md  README.md  pom.xml
Sensors_Web_App/: README.md  angular.json  package-lock.json  package.json  proxy.conf.json
Sensors_Web_App/src/: index.html
Storage/: clear_files.sh  create_abort.sh  create_goal.sh  create_goal_multi.sh
Storage/examples/: test_file_abort.txt  test_file_action.txt  test_file_feedback.txt  test_file_feedback2.txt  test_file_goal.txt  test_file_goal2.txt  test_file_wearable_feedback.txt  test_file_wearable_sos.txt
Storage/maps/: library-new.pgm  library-new.yaml
Storage/worlds/: biblioteca.sdf
Wearable_Reader/: README.md
config/: config.vars  cyclone-dds-interface-select-laptop.xml  cyclone-dds-interface-select-minipc.xml  cyclone-dds-interface-select-robot.xml
doc/: Doxyfile
doc/how_to_upgrade_wifi_firmware_iotnode/: README.MD
doc/library_measures/: library-measure.md
doc/usecases/: uml_seq_arch_abort.plantuml  uml_seq_arch_goal.plantuml
use_case_resources/: README.md  coord_in_corner.yaml  first_coordinate_system.yaml
use_case_resources/hospital/: demo_steps.MD  hospital_map.pgm  hospital_map.yaml  robots.yaml  world.sdf  world_automatic_trigger.sdf
use_case_resources/store/: robots.yaml  store_map.pgm  store_map.yaml  world.sdf
(+17181 files in other folders)
